--- a/tutorials/Demo.html
+++ b/tutorials/Demo.html
@@ -120,14 +120,25 @@ this package into their workflow.</p>
 <p>This tutorial is an extension of the example presented on the <a
 href="https://nmfs-ost.github.io/asar/">home page</a>.</p>
 </div>
-<div id="section-tldr-video" class="section level2">
-<h2>TLDR Video</h2>
-<p>Below is a shortened demonstration of what is in this tutorial:</p>
+<div id="section-tldr" class="section level2">
+<h2>TLDR</h2>
+<p>Below is a shortened demonstration of some of the content in this
+tutorial:</p>
 <iframe width="640" height="360" src="https://youtube.com/embed/Q8XJTTkjcts?autoplay&amp;end=1577&amp;start=1200 " frameborder="0" allowfullscreen>
 </iframe>
 </div>
 <div id="section-background" class="section level2">
 <h2>Background</h2>
+<p>In this tutorial, you will be working to recreate the 2023 Petral
+sole stock assessment report. The materials you might need such as
+example data can be found <a
+href="https://github.com/nmfs-ost/asar-demo/tree/main/data">here</a>.
+Additionally, to check your work, there is an <a
+href="https://github.com/nmfs-ost/asar-demo/tree/main/stock_assessment_reports">additional
+folder</a> containing the files that should be produced if you want to
+recreate this example.</p>
+<div id="section-species-background" class="section level3">
+<h3>Species Background</h3>
 <p>Petrale sole is a right-eyed flounder ranging from the western Gulf
 of Alaska to the Coronado Islands in northern Baja California. It is
 often referred to as brill, California sole, Jordan’s flounder, cape
@@ -141,6 +152,7 @@ assessment report</a> published by the Pacific Fisheries Management
 Council (PFMC). Additional assessments from the PFMC can be found online
 <a
 href="https://www.pcouncil.org/stock-assessments-star-reports-stat-reports-rebuilding-analyses-terms-of-reference/groundfish-stock-assessment-documents/">here</a>.</p>
+</div>
 </div>
 <div id="section-prerequisites" class="section level2">
 <h2>Prerequisites</h2>
@@ -169,6 +181,7 @@ Options &gt; General.</p>
 package and create a template for a stock assessment report. It can be
 helpful to save this script for later use or future assessments.</p>
 <p><img src="images/new_script.png" /></p>
+<p><img src="images/new_script.png" /><!-- --></p>
 </div>
 <div id="section-relative-paths" class="section level2">
 <h2>Relative Paths</h2>
@@ -178,13 +191,13 @@ that allows R to create a path to a folder without having the user
 manually write out the path. The way to use this is to download the
 packages, run the function <code>here</code>after setting the working
 directory.</p>
-<pre><code>install.packages(&quot;here&quot;)
+<pre class="r"><code>install.packages(&quot;here&quot;)
 here::here()</code></pre>
 <p>The user can now designate paths within the folder containing the
 ‘here’ file. Note: the file will be hidden within the Rstudio interface,
 but can be seen in File explorer or an equal local file location.</p>
 <p>Example:</p>
-<pre><code>output &lt;- load(here::here(&quot;data&quot;, &quot;Report.sso))</code></pre>
+<pre class="r"><code>output &lt;- load(here::here(&quot;data&quot;, &quot;Report.sso))</code></pre>
 </div>
 <div id="section-locate-model-ouptut-file" class="section level2">
 <h2>Locate Model Ouptut File</h2>
@@ -258,7 +271,7 @@ framework.</p>
   param_names = c(&quot;nf&quot;,&quot;sf&quot;),
   param_values = c(&quot;North fleet&quot;, &quot;South fleet&quot;),
   resdir = here(), # indicate where the model output is located
-  model_results = &quot;petrale_convert_output.csv&quot;, # converted model output
+  model_results = &quot;petrale_convert_output.csv&quot; # converted model output
 )</code></pre>
 </div>
 <div id="section-create_template-customizations" class="section level2">
@@ -272,7 +285,7 @@ affiliations of assessment authors. The default is a “simple”
 affiliation which only sites the institution that the author(s) is
 associated with negating the address afterwards. All other affiliations
 will include each author’s institution name and address.</p>
-<pre><code>author:
+<pre class="r"><code>author:
   - name: &#39;Ian G. Taylor&#39;
     affiliations:
       - name: &#39;NOAA Fisheries Northwest Fisheries Science Center&#39;
@@ -292,16 +305,56 @@ will be added as soon as possible.</p>
 <div id="section-parameterization" class="section level3">
 <h3>Parameterization</h3>
 <p>The skeleton is by default parameterized to allow the user to
-refrence commonly used terms or quanitites. The default parameters are
+reference commonly used terms or quantities. The default parameters are
 species, office, and region (is applicable).</p>
 <p>Two arguments in the function allow the user to add more parameters:
 - <code>param_names</code> - <code>param_values</code></p>
 <p>To use these parameters, use the following notation while writing
 text:</p>
 <pre><code>&#39;r params$species`</code></pre>
+<p>Additional parameters can be added using the argument:</p>
+<ul>
+<li><code>param_names</code></li>
+<li><code>param_values</code></li>
+</ul>
+<p>For including more than one new parameter please list them using
+<code>c()</code>. For example:</p>
+<pre class="r"><code>param_names = c(&quot;fleet1&quot;, &quot;fleet2&quot;, )</code></pre>
 </div>
 <div id="section-section-customizations" class="section level3">
 <h3>Section Customizations</h3>
+<p>By default, the template from <code>asar</code> includes the
+recommended standard guidelines for a NOAA stock assessment as agreed
+upon by a Steering Committee of NOAA assessment scientists. Details
+about what to include within each section/subsection are located in the
+default templates using an HTML comment. This means that the text will
+not be rendered with the rest of the document. Users can remove this
+text when writing the document if they wish.</p>
+<p><code>asar</code> offers a variety of customization features
+including the option to select a subset of sections using the argument
+<code>custom=TRUE</code> and <code>custom_sections</code> or add a new
+sections within the default (or custom selection) using the arguments
+<code>new_section</code> and <code>section_location</code>.</p>
+<p>For example, if the user only wants to write a stock assessment
+report update that contains new data and the results. Run the following
+code:</p>
+<pre class="r"><code>asar::create_template(
+  format = &quot;pdf&quot;,
+  office = &quot;NWFSC&quot;,
+  region = &quot;U.S. West Coast&quot;,
+  species = &quot;Petrale sole&quot;,
+  spp_latin = &quot;Eopsetta jordani&quot;,
+  year = 2023,
+  author = c(&quot;Ian G. Taylor&quot;, &quot;Vladlena Gertseva&quot;, &quot;Nick Tolimieri&quot;),
+  include_affiliation = TRUE,
+  simple_affiliation = FALSE,
+  param_names = c(&quot;nf&quot;,&quot;sf&quot;),
+  param_values = c(&quot;North fleet&quot;, &quot;South fleet&quot;),
+  resdir = here(),
+  model_results = &quot;petrale_convert_output.csv&quot;,
+  add_section = &quot;Harvest Control Rules&quot;,
+  section_location = &quot;after-results&quot;
+)</code></pre>
 </div>
 </div>
 <div id="section-what-to-expect" class="section level2">
@@ -338,7 +391,7 @@ using <code>c()</code>)</li>
 (cases with more than one new sections added relative to another section
 will be added in the order listed)</li>
 </ul>
-<pre><code>new_section = &quot;Management&quot;
+<pre class="r"><code>new_section = &quot;Management&quot;
 section_location = &quot;after-modeling_approach&quot;</code></pre>
 </div>
 </div>
@@ -349,27 +402,34 @@ applicable with a blanket statement), it is time to produce the pdf
 report. User should click the ‘render’ button at the top of the script
 when using R studio or run the following code in their
 <strong>terminal</strong>:</p>
-<pre><code>quarto render SAR_USWC_Petrale_sole_skeleton.qmd</code></pre>
+<pre class="r"><code>quarto render SAR_USWC_Petrale_sole_skeleton.qmd</code></pre>
 <p><img src="images/example-pop-up-highlight.png" /></p>
 </div>
 <div id="section-figure-and-table-chunks" class="section level2">
 <h2>Figure and Table Chunks</h2>
-<p>In the tables.qmd and figures.qmd quarto files located in your
-folder, there will be a series of pre-made tables and figures that
-includes pre-written generic captions and alternative text. You are able
-to include or not include these objects at will. We recommend not to,
-but if a table or figure doesn’t apply, you are able to prevent the
-object from being added to the report by changing the option of
-<strong>eval</strong> to false.</p>
+<p>In the <code>tables.qmd</code> and <code>figures.qmd</code> quarto
+files located in your folder, there will be a series of pre-made tables
+and figures that includes pre-written generic captions and alternative
+text. You are able to include or not include these objects at will. We
+recommend not to, but if a table or figure doesn’t apply, you are able
+to prevent the object from being added to the report by changing the
+option of <strong>eval</strong> to false.</p>
 <p>Here is an example:</p>
+<pre class="r"><code>#| label: &#39;recruitment&#39;
+#| echo: false 
+#| warning: false 
+#| eval: false 
+#| fig-cap: &quot;Recruitment over time of this species in the region.&quot;
+#| fig-alt: &quot;Graph of recruitment over time. Data can be found at the species folder at the Pacific Fisheries Management Council.&quot;
+satf::plot_recruitment(dat = &#39;C:/Users/samantha.schiano/Documents/asar_live_demo/Report.sso&#39;, model = &#39;SS3&#39;)</code></pre>
 <p>You can also adjust figure captions and alternative text from the
 arguments <code>fig-cap</code> and <code>fig-alt</code>. These two areas
 contain pre-generated generic text that applies to the table/figure. To
-edit, simply madke changes to the sentence(s) between the quotation
+edit, simply make changes to the sentence(s) between the quotation
 marks.</p>
 </div>
-<div id="section-additional-helpful-tips" class="section level2">
-<h2>Additional Helpful Tips</h2>
+<div id="section-tips" class="section level2">
+<h2>Tips</h2>
 <p>
 <script type="application/shiny-prerendered" data-context="server-start">
 library(learnr)
@@ -402,7 +462,7 @@ session$onSessionEnded(function() {
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.4.1","0.8.0","1.1.0","2.3.2","3.6.3","4.4.1","4.4.1","0.6.37","1.0.1","1.2.0","0.5.2","4.4.1","4.4.1","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.48","1.3.2","0.11.5","1.0.4","2.0.3","4.4.1","0.12","1.3.0","2.5.1","1.0.13","1.1.4","2.28","2.0.4","0.16.0","0.4.9","1.9.1","4.4.1","4.4.1","4.4.1","3.0.1","0.48","1.8-4","2.3.10"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","highr","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.4.1","0.8.0","1.1.0","2.3.2","3.6.3","4.4.1","4.4.1","0.6.37","1.0.1","1.2.0","0.5.2","4.4.1","4.4.1","0.11","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.48","1.3.2","0.11.5","1.0.4","2.0.3","4.4.1","0.12","1.3.0","2.5.1","1.0.13","1.1.4","2.28","2.0.4","0.16.0","0.4.9","1.9.1","4.4.1","4.4.1","4.4.1","3.0.1","0.48","1.8-4","2.3.10"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
