--- a/tutorials/Demo.html
+++ b/tutorials/Demo.html
@@ -181,7 +181,6 @@ Options &gt; General.</p>
 package and create a template for a stock assessment report. It can be
 helpful to save this script for later use or future assessments.</p>
 <p><img src="images/new_script.png" /></p>
-<p><img src="images/new_script.png" /><!-- --></p>
 </div>
 <div id="section-relative-paths" class="section level2">
 <h2>Relative Paths</h2>
@@ -462,7 +461,7 @@ session$onSessionEnded(function() {
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","highr","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.4.1","0.8.0","1.1.0","2.3.2","3.6.3","4.4.1","4.4.1","0.6.37","1.0.1","1.2.0","0.5.2","4.4.1","4.4.1","0.11","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.48","1.3.2","0.11.5","1.0.4","2.0.3","4.4.1","0.12","1.3.0","2.5.1","1.0.13","1.1.4","2.28","2.0.4","0.16.0","0.4.9","1.9.1","4.4.1","4.4.1","4.4.1","3.0.1","0.48","1.8-4","2.3.10"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.4.1","0.8.0","1.1.0","2.3.2","3.6.3","4.4.1","4.4.1","0.6.37","1.0.1","1.2.0","0.5.2","4.4.1","4.4.1","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.48","1.3.2","0.11.5","1.0.4","2.0.3","4.4.1","0.12","1.3.0","2.5.1","1.0.13","1.1.4","2.28","2.0.4","0.16.0","0.4.9","1.9.1","4.4.1","4.4.1","4.4.1","3.0.1","0.48","1.8-4","2.3.10"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
