fix(images): add resource path for images and css

--- a/tutorials/Demo.html
+++ b/tutorials/Demo.html
@@ -340,7 +340,7 @@ the option to select a subset of sections using the argument
 <p>For example, if the user only wants to write a stock assessment
 report update that contains new data and the results.</p>
 <p>Here is an application for customizing a template:</p>
-<pre class="r highlight"><code>asar::create_template(
+<pre class="r"><code>asar::create_template(
   format = &quot;pdf&quot;,
   office = &quot;NWFSC&quot;,
   region = &quot;U.S. West Coast&quot;,
@@ -361,8 +361,8 @@ report update that contains new data and the results.</p>
 )</code></pre>
 </div>
 </div>
-<div id="section-what-to-expect" class="section level2">
-<h2>What to expect</h2>
+<div id="section-what-to-expect" class="section level2 tabset">
+<h2 class="tabset">What to expect</h2>
 <div id="section-skeleton-pop-up" class="section level3">
 <h3>Skeleton Pop-up</h3>
 <p>During processing, you will see progress for the template being built
