--- a/tutorials/Demo.html
+++ b/tutorials/Demo.html
@@ -124,10 +124,10 @@ href="https://nmfs-ost.github.io/asar/">home page</a>.</p>
 <div id="section-recorded-demo" class="section level2">
 <h2>Recorded Demo</h2>
 <p>Below is a shortened demonstration of some of the content in this
-tutorial. Please note that this demo was recorded in December 2024,
-right before the tool’s first release in January 2025. If you encounter
-issues with your code, double-check with the package’s documentation,
-which will be up-to-date.</p>
+tutorial. Please note that this demo was recorded in October 2024,
+before the tool’s first release in January 2025. If you encounter issues
+with your code, double-check with the package’s documentation, which
+will be up-to-date.</p>
 <iframe width="640" height="360" src="https://youtube.com/embed/Q8XJTTkjcts?autoplay&amp;end=1577&amp;start=1200 " frameborder="0" allowfullscreen>
 </iframe>
 </div>
@@ -219,7 +219,7 @@ location.</p>
 <p>For this step, we recommend either placing the model results file for
 either Stock Synthesis (SS3) or Beaufort Assessment Model (BAM) into
 your working directory. The model results files are the Report.sso file
-(SS3) and the .rdat file produced after running the ADMB2R routines
+(SS3) or the .rdat file produced after running the ADMB2R routines
 (BAM).</p>
 <p>You can download the petrale sole output file <a
 href="https://github.com/nmfs-ost/asar/tree/main/data/Report.sso">here</a>.</p>
@@ -237,8 +237,7 @@ class="section level2 tabset">
 <code>create_template</code> function for large and/or complex data
 sets. There are two options for running this function.</p>
 <ol style="list-style-type: decimal">
-<li>(Recommended) Save the converted model results as a .csv, then load
-into your R environment</li>
+<li>(Recommended) Save the converted model results as a .csv</li>
 </ol>
 <pre class="r"><code>asar::convert_output(
   output_file = output_file,
@@ -247,9 +246,7 @@ into your R environment</li>
   file_save = TRUE,
   savedir = getwd(),
   save_name = &quot;petrale_sole_std_output&quot;
-)
-
-output &lt;- read.csv(here::here(&quot;petrale_sole_std_output.csv&quot;))</code></pre>
+)</code></pre>
 <ol start="2" style="list-style-type: decimal">
 <li>Convert model results and save as an object in your R
 environment</li>
@@ -285,7 +282,9 @@ as desired.</p>
   rda_dir = here(),
   ref_line = &quot;unfished&quot;,
   ref_line_sb = &quot;target&quot;)</code></pre>
-<p><em>Note:</em> if you want increased customization for these
+<p><em>Note:</em> The dat file in the above function should be the
+converted dataframe from the <code>convert_outpout</code> function ran
+earlier in this tutorial. If you want increased customization for these
 tables/figures, we encourage you to run various functions in
 <code>satf</code> individually.</p>
 <ol start="2" style="list-style-type: decimal">
@@ -294,8 +293,7 @@ same step, set specific arguments in <code>asar::create_template</code>
 to run everything together. The arguments are as follows:</li>
 </ol>
 <ul>
-<li><p>make_rda (required)</p></li>
-<li><p>rda_dir (required)</p></li>
+<li>rda_dir (required)</li>
 </ul>
 <p>Optional:</p>
 <ul>
@@ -306,9 +304,9 @@ to run everything together. The arguments are as follows:</li>
 <li><p>recruitment_label</p></li>
 </ul>
 <p>After selecting one of the two above options, you should have created
-a folder that contains .rda files containing tables and figures with
-their associated caption and alternative text (all pre-built for you).
-You must check that the captions and alternative text are complete and
+a folder that contains .rda files of tables and figures with their
+associated caption and alternative text (all pre-built for you!). You
+must check that the captions and alternative text are complete and
 accurate, then update them yourself if needed. See the <a
 href="https://nmfs-ost.github.io/asar/articles/accessibility_guide.html">accessibility-related
 vignette</a> for guidance.</p>
@@ -484,6 +482,12 @@ section_location = &quot;after-modeling_approach&quot;</code></pre>
 </div>
 <div id="section-figure-and-table-chunks" class="section level2">
 <h2>Figure and Table Chunks</h2>
+<p>The pre-made tables and figures are generated through the use of a
+separate package called <code>satf</code>. By separating these two
+functions, it allows you to evaluate results files quickly without also
+generating the report. However, these two packages were co-developed to
+seamlessly integrate with one another and streamline the stock
+assessment workflow.</p>
 <p>In the <code>tables.qmd</code> and <code>figures.qmd</code> quarto
 files located in your folder, there will be a series of pre-made tables
 and figures that includes pre-written generic captions and alternative
@@ -492,20 +496,51 @@ recommend to include all default objects, but if a table or figure
 doesn’t apply, you are able to prevent the object from being added to
 the report by changing the option of <strong>eval</strong> to false.</p>
 <p>Here is an example:</p>
-<pre class="r"><code>#| label: &#39;recruitment&#39;
+<p>For each object (table or figure), there will be two chunks to
+properly call and create the object. The first loads in the rda object
+for the table or figure and calls in the list within the loaded rda into
+separate objects.</p>
+<pre class="r"><code>#| label: &#39;fig-recruitment-setup&#39;
 #| echo: false 
 #| warning: false 
-#| eval: false 
-#| fig-cap: &quot;Recruitment over time of this species in the region.&quot;
-#| fig-alt: &quot;Graph of recruitment over time. Data can be found at the species folder at the Pacific Fisheries Management Council.&quot;
-satf::plot_recruitment(dat = output)</code></pre>
+#| eval: true 
+# if the recruitment figure rda exists:
+if (file.exists(file.path(rda_dir, &#39;recruitment_figure.rda&#39;))){
+
+  # load rda
+  load(file.path(rda_dir, &#39;recruitment_figure.rda&#39;))
+
+  # save rda with plot-specific name
+  recruitment_plot_rda &lt;- rda
+
+  # remove generic rda object
+  rm(rda)
+
+  # save figure, caption, and alt text as separate objects; set eval to TRUE
+  recruitment_plot &lt;- recruitment_plot_rda$figure
+  recruitment_cap &lt;- recruitment_plot_rda$cap
+  recruitment_alt_text &lt;- recruitment_plot_rda$alt_text
+  eval_recruitment &lt;- TRUE
+
+# if the recruitment figure rda does not exist, don&#39;t evaluate the next chunk
+} else {eval_recruitment &lt;- FALSE}</code></pre>
+<pre class="r"><code>#| label: &#39;fig-recruitment-plot&#39;
+#| echo: false 
+#| warning: false 
+#| eval: !expr eval_recruitment 
+#| fig-cap: !expr if(eval_recruitment) recruitment_cap 
+#| fig-alt: !expr if(eval_recruitment) recruitment_alt_text
+recruitment_plot</code></pre>
 <p>You can also adjust figure captions and alternative text from the
 arguments <code>fig-cap</code> and <code>fig-alt</code>. These two areas
 contain pre-generated generic text that applies to the table/figure. To
 edit, simply make changes to the sentence(s) between the quotation
 marks. More guidance on writing alternative text is available on <a
 href="https://nmfs-ost.github.io/asar/articles/index.html"><code>asar</code>
-GitHub Pages</a></p>
+GitHub Pages</a>.</p>
+<p>Currently, quarto does not include features for alternative text in
+PDFs, but the developers of asar are working on a way to get around this
+issue.</p>
 </div>
 <div id="section-rendering" class="section level2">
 <h2>Rendering</h2>
@@ -526,19 +561,19 @@ with quarto. This area controls all of the formatting and will be the
 most likely spot for causing the document to break when
 rendering.</p></li>
 <li><p>In the future, additional tables and figures will be available
-from the <a href="">satf</a> R package. Users can add these in by
-clicking the drop down button that looks like a square with a c in it or
-manually write in</p></li>
+from the <a href="https://github.com/nmfs-ost/satf">satf</a> R package.
+Users can add these in by clicking the drop down button that looks like
+a square with a c in it or manually write in</p></li>
 </ul>
-<pre class="r"><code># ```{r}
-# #| label: &#39;&#39;
-# #| echo: false
-# #| warning: false
-# #| eval: true 
-# #| fig-cap: &quot;Insert figure/table caption&quot;
-# #| fig-alt: &quot;Insert alternative text for figure/table&quot;
+<pre class="default"><code>```{r}
+#| label: &#39;&#39;
+#| echo: false
+#| warning: false
+#| eval: true 
+#| fig-cap: &quot;Insert figure/table caption&quot;
+#| fig-alt: &quot;Insert alternative text for figure/table&quot;
 # satf::plot_recruitment(dat = output)
-# ```</code></pre>
+```</code></pre>
 <ul>
 <li><code>asar</code> is a continual work in progress. Version 1.0 is
 planned for release at the end of December of 2024 with additional
@@ -577,7 +612,7 @@ session$onSessionEnded(function() {
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.2.2","0.8.0","1.1.0","2.3.2","3.6.3","4.2.2","4.2.2","0.6.37","1.0.1","1.2.0","0.5.3","4.2.2","4.2.2","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.49","1.3.2","0.11.5","1.0.4","2.0.3","4.2.2","0.12","1.3.0","2.5.1","1.0.13-1","1.1.4","2.29","2.0.4","0.17.1","0.4.9","1.9.1","4.2.2","4.2.2","4.2.2","3.0.2","0.49","1.8-4","2.3.10"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.3.3","0.8.0","1.1.0","2.3.2","3.6.3","4.3.3","4.3.3","0.6.37","1.0.1","1.2.0","0.5.3","4.3.3","4.3.3","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.49","1.3.2","0.11.5","1.0.4","2.0.3","4.3.3","0.12","1.3.0","2.5.1","1.0.13-1","1.1.4","2.29","2.0.4","0.17.1","0.4.9","1.9.1","4.3.3","4.3.3","4.3.3","3.0.2","0.49","1.8-4","2.3.10"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
