--- a/tutorials/Demo.html
+++ b/tutorials/Demo.html
@@ -278,12 +278,13 @@ as desired.</p>
 </ol>
 <pre><code>satf::exp_all_figs_tables(
   dat,
-  make_rda = TRUE,
-  rda_dir = here(),
+  end_year = 2022,
+  rda_dir = here::here(),
   ref_line = &quot;unfished&quot;,
-  ref_line_sb = &quot;target&quot;)</code></pre>
+  ref_line_sb = &quot;target&quot;,
+  indices_unit_label = &quot;CPUE&quot;)</code></pre>
 <p><em>Note:</em> The dat file in the above function should be the
-converted dataframe from the <code>convert_outpout</code> function ran
+converted dataframe from the <code>convert_output</code> function ran
 earlier in this tutorial. If you want increased customization for these
 tables/figures, we encourage you to run various functions in
 <code>satf</code> individually.</p>
@@ -297,14 +298,20 @@ to run everything together. The arguments are as follows:</li>
 </ul>
 <p>Optional:</p>
 <ul>
+<li><p>recruitment_unit_label</p></li>
 <li><p>end_year</p></li>
 <li><p>ref_line</p></li>
 <li><p>ref_line_sb</p></li>
+<li><p>landings_unit_label</p></li>
 <li><p>spawning_biomass_label</p></li>
-<li><p>recruitment_label</p></li>
+<li><p>ref_point</p></li>
+<li><p>ref_point_sb</p></li>
+<li><p>indices_unit_label</p></li>
+<li><p>biomass_unit_label</p></li>
+<li><p>catch_unit_label</p></li>
 </ul>
 <p>After selecting one of the two above options, you should have created
-a folder that contains .rda files of tables and figures with their
+a folder that contains rda files of tables and figures with their
 associated caption and alternative text (all pre-built for you!). You
 must check that the captions and alternative text are complete and
 accurate, then update them yourself if needed. See the <a
@@ -345,8 +352,8 @@ package</a>.</p>
   simple_affiliation = FALSE,
   param_names = c(&quot;nf&quot;,&quot;sf&quot;),
   param_values = c(&quot;North fleet&quot;, &quot;South fleet&quot;),
-  resdir = here(), # indicate where the model output is located
-  model_results = &quot;petrale_convert_output.csv&quot; # converted model output
+  resdir = here::here(), # indicate where the model output is located
+  model_results = &quot;petrale_sole_std_output.csv&quot; # converted model output
 )</code></pre>
 </div>
 <div id="section-create_template-customizations"
@@ -432,11 +439,11 @@ report update that contains new data and the results.</p>
   simple_affiliation = FALSE,
   param_names = c(&quot;nf&quot;,&quot;sf&quot;),
   param_values = c(&quot;North fleet&quot;, &quot;South fleet&quot;),
-  resdir = here(),
-  model_results = &quot;petrale_convert_output.csv&quot;,
+  resdir = here::here(),
+  model_results = &quot;petrale_sole_std_output.csv&quot;,
   custom = TRUE,
   custom_sections = c(&quot;data&quot;, &quot;assessment&quot;, &quot;discussion&quot;),
-  add_section = &quot;Harvest Control Rules&quot;,
+  new_section = &quot;Harvest Control Rules&quot;,
   section_location = &quot;after-assessment&quot;
 )</code></pre>
 </div>
@@ -457,12 +464,12 @@ assessment.</p>
 </div>
 <div id="section-sections" class="section level3">
 <h3>Sections</h3>
-<p>There will be a series of quarto (.qmd) files along with some others
+<p>There will be a series of Quarto (.qmd) files along with some others
 generated with the folder. The user will not need to modify the
-‘skeleton.qmd’, but all other quarto files will need to be filled
+‘skeleton.qmd’, but all other Quarto files will need to be filled
 in.</p>
 <p><img src="images/example-pop-up.PNG" /></p>
-<p>Each section quarto file contains pre-built heading tags and
+<p>Each section Quarto file contains pre-built heading tags and
 subsections with details indicating what the user should touch on for
 each section.</p>
 <p><img src="images/example-section.PNG" /></p>
@@ -477,7 +484,7 @@ using <code>c()</code>)</li>
 will be added in the order listed)</li>
 </ul>
 <pre class="r"><code>new_section = &quot;Management&quot;
-section_location = &quot;after-modeling_approach&quot;</code></pre>
+section_location = &quot;before-discussion&quot;</code></pre>
 </div>
 </div>
 <div id="section-figure-and-table-chunks" class="section level2">
@@ -488,7 +495,7 @@ functions, it allows you to evaluate results files quickly without also
 generating the report. However, these two packages were co-developed to
 seamlessly integrate with one another and streamline the stock
 assessment workflow.</p>
-<p>In the <code>tables.qmd</code> and <code>figures.qmd</code> quarto
+<p>In the <code>tables.qmd</code> and <code>figures.qmd</code> Quarto
 files located in your folder, there will be a series of pre-made tables
 and figures that includes pre-written generic captions and alternative
 text. You are able to include or not include these objects at will. We
@@ -533,14 +540,16 @@ if (file.exists(file.path(rda_dir, &#39;recruitment_figure.rda&#39;))){
 recruitment_plot</code></pre>
 <p>You can also adjust figure captions and alternative text from the
 arguments <code>fig-cap</code> and <code>fig-alt</code>. These two areas
-contain pre-generated generic text that applies to the table/figure. To
-edit, simply make changes to the sentence(s) between the quotation
-marks. More guidance on writing alternative text is available on <a
+contain pre-generated generic text that applies to the table/figure.
+<strong>Always check that a figure’s alt text is accurate and
+complete.</strong> To edit, simply make changes to the sentence(s)
+between the quotation marks. More guidance on writing alternative text
+is available on <a
 href="https://nmfs-ost.github.io/asar/articles/index.html"><code>asar</code>
 GitHub Pages</a>.</p>
-<p>Currently, quarto does not include features for alternative text in
-PDFs, but the developers of asar are working on a way to get around this
-issue.</p>
+<p>Currently, Quarto does not include features for alternative text in
+PDFs, but the developers of <code>asar</code> are working on a way to
+get around this issue.</p>
 </div>
 <div id="section-rendering" class="section level2">
 <h2>Rendering</h2>
@@ -556,30 +565,33 @@ when using R studio or run the following code in the
 <h2>Tips</h2>
 <ul>
 <li><p>DO NOT make changes to the area between the three dashes in the
-quarto skeleton file (<code>---</code>) unless you are very familiar
-with quarto. This area controls all of the formatting and will be the
+Quarto skeleton file (<code>---</code>) unless you are very familiar
+with Quarto. This area controls all of the formatting and will be the
 most likely spot for causing the document to break when
 rendering.</p></li>
 <li><p>In the future, additional tables and figures will be available
-from the <a href="https://github.com/nmfs-ost/satf">satf</a> R package.
+from the <a
+href="https://github.com/nmfs-ost/satf"><code>satf</code></a> R package.
 Users can add these in by clicking the drop down button that looks like
 a square with a c in it or manually write in</p></li>
 </ul>
-<pre class="default"><code>```{r}
-#| label: &#39;&#39;
+<pre class="r"><code>#| label: &#39;&#39;
 #| echo: false
 #| warning: false
 #| eval: true 
 #| fig-cap: &quot;Insert figure/table caption&quot;
 #| fig-alt: &quot;Insert alternative text for figure/table&quot;
-# satf::plot_recruitment(dat = output)
-```</code></pre>
+satf::plot_recruitment(dat = output)</code></pre>
 <ul>
-<li><code>asar</code> is a continual work in progress. Version 1.0 is
+<li><p><code>asar</code> is a continual work in progress. Version 1.0 is
 planned for release at the end of December of 2024 with additional
 features added in through 2025. Please leave an <a
 href="https://github.com/nmfs-ost/asar/issues">issue</a> for any bugs
-you may run into. 
+you may run into.</p></li>
+<li><p>Check out our <a
+href="https://nmfs-ost.github.io/asar/articles/faqs.html">Frequently
+Asked Questions (FAQ) page</a> for more guidance using
+<code>asar</code>. 
 <script type="application/shiny-prerendered" data-context="server-start">
 library(learnr)
 </script>
@@ -603,7 +615,7 @@ session$onSessionEnded(function() {
         learnr:::event_trigger(session, "session_stop")
       })
 </script>
-</li>
+</p></li>
 </ul>
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="dependencies">
@@ -612,7 +624,7 @@ session$onSessionEnded(function() {
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.3.3","0.8.0","1.1.0","2.3.2","3.6.3","4.3.3","4.3.3","0.6.37","1.0.1","1.2.0","0.5.3","4.3.3","4.3.3","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.49","1.3.2","0.11.5","1.0.4","2.0.3","4.3.3","0.12","1.3.0","2.5.1","1.0.13-1","1.1.4","2.29","2.0.4","0.17.1","0.4.9","1.9.1","4.3.3","4.3.3","4.3.3","3.0.2","0.49","1.8-4","2.3.10"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42]}},"value":[{"type":"character","attributes":{},"value":["backports","base","bslib","cachem","checkmate","cli","compiler","datasets","digest","evaluate","fastmap","fontawesome","graphics","grDevices","htmltools","htmlwidgets","httpuv","jquerylib","jsonlite","knitr","later","learnr","lifecycle","magrittr","methods","mime","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","rstudioapi","sass","shiny","stats","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["1.5.0","4.2.2","0.8.0","1.1.0","2.3.2","3.6.3","4.2.2","4.2.2","0.6.37","1.0.1","1.2.0","0.5.3","4.2.2","4.2.2","0.5.8.1","1.6.4","1.6.15","0.1.4","1.8.9","1.49","1.3.2","0.11.5","1.0.4","2.0.3","4.2.2","0.12","1.3.0","2.5.1","1.0.13-1","1.1.4","2.29","2.0.4","0.17.1","0.4.9","1.9.1","4.2.2","4.2.2","4.2.2","3.0.2","0.49","1.8-4","2.3.10"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
